# GCC-WEALTH-INVESTMENT-PLATFORM-

./: .gitignore  README.md
wealth-platform-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
wealth-platform-backend/alembic/: env.py
wealth-platform-backend/alembic/versions/: 001_initial.py
wealth-platform-backend/app/: __init__.py  main.py
wealth-platform-backend/app/api/: deps.py
wealth-platform-backend/app/api/v1/: __init__.py  auth.py  banks.py  fees.py  portfolios.py  revenue.py  users.py
wealth-platform-backend/app/core/: __init__.py  config.py  database.py  exceptions.py  middleware.py  security.py
wealth-platform-backend/app/models/: __init__.py  account.py  audit.py  bank.py  base.py  goal.py  invoice.py  revenue.py  service_fee.py  tax.py  user.py
wealth-platform-backend/app/schemas/: __init__.py  bank.py  common.py  fee.py  revenue.py  user.py
wealth-platform-backend/app/services/: __init__.py  fee_service.py  revenue_calculator.py
wealth-platform-backend/scripts/: seed_fee_configs.py
wealth-platform-backend/tests/: conftest.py  test_banks.py
wealth-platform-user-app/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
wealth-platform-user-app/public/: manifest.json
wealth-platform-user-app/src/app/: globals.css  layout.tsx  page.tsx
wealth-platform-user-app/src/app/[tenant]/: layout.tsx  page.tsx
wealth-platform-user-app/src/app/[tenant]/documents/: page.tsx
wealth-platform-user-app/src/components/fees/: FeeDisclosure.tsx
wealth-platform-user-app/src/components/layout/: TenantClientWrapper.tsx
wealth-platform-user-app/src/components/portfolio/: index.tsx
wealth-platform-user-app/src/components/tenant/: TenantProvider.tsx  ThemedButton.tsx
wealth-platform-user-app/src/lib/: api-client.ts  tenant.ts
wealth-platform-user-app/src/lib/auth/: AuthContext.tsx
wealth-platform-user-app/src/lib/i18n/: index.ts
(+21 files in other folders)
